CMAKE_MINIMUM_REQUIRED( VERSION 3.1.0 FATAL_ERROR )

PROJECT( LD42 )

SET( CRIMILD_ENABLE_SDL ON CACHE BOOL "Enable SDL module for Crimild" )

ADD_SUBDIRECTORY( crimild )

SET ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CRIMILD_SOURCE_DIR}/CMakeTools" )

SET( CRIMILD_APP_NAME LD42 )
SET( CRIMILD_APP_SOURCE_DIRECTORIES src/game src/pc )
SET( CRIMILD_APP_INCLUDE_DIRECTORIES src/game src/pc )
SET( CRIMILD_APP_ASSETS_DIRECTORY assets )
SET( CRIMILD_APP_INDEX_FILE src/web/index.html )

INCLUDE( ModuleBuildApp )

